Recap-471 : Made changes to search request UI.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -10,9 +10,11 @@
                 <input id="pageNumber" name="pageNumber" type="text" th:field="*{pageNumber}" hidden="hidden"/>
                 <input id="totalPageCount" name="totalPageCount" type="text" th:field="*{totalPageCount}" hidden="hidden"/>
                 <input id="totalRecordsCount" name="totalRecordsCount" type="text" th:field="*{totalRecordsCount}" hidden="hidden"/>
+                <input id="requestStatuses" name="requestStatuses" type="text" th:field="*{requestStatuses}" hidden="hidden"/>
                 <input id="patronBarcodeInRequestHdn" name="patronBarcodeInRequestHdn" type="text" value="" hidden="hidden"/>
                 <input id="patronEmailIdHdn" name="patronEmailIdHdn" type="text" value="" hidden="hidden"/>
                 <input id="requestingInstitutionHdn" name="requestingInstitutionHdn" type="text" value="" hidden="hidden"/>
+                <input id="requestIdHdn" name="requestIdHdn" type="text" th:field="*{requestId}" hidden="hidden"/>
                 <div role="tabpanel" class="tab-pane" id="request">
                     <div id="searchRequestsSection" class="request-main-section" style="display:none;">
                         <div class="search-bar">
@@ -23,15 +25,28 @@
                                 <div class="col-xs-12  padding-0">
                                     <form>
                                         <div class="input-group buscador-principal">
-                                            <div class="col-md-6 col-sm-6 padding-right-20 padding-left-0">
+                                            <div class="col-md-4 col-sm-4 padding-right-20 padding-left-0">
                                                 <label class="fontcolor-dark margin-btm-10">Patron Barcode</label>
                                                 <input id="patronBarcode" name="patronBarcode" type="text" th:field="*{patronBarcode}" class="form-control themed-input"/>
                                             </div>
-                                            <div class="col-md-6 col-sm-6 padding-right-50 padding-left-50">
+                                            <div class="col-md-4 col-sm-4 padding-right-50">
                                                 <label class="fontcolor-dark margin-btm-10">Item Barcode</label>
                                                 <input id="itemBarcode" name="itemBarcode" type="text" th:field="*{itemBarcode}" class="form-control themed-input"/>
                                             </div>
-                                            <div class="input-group-btn search-panel padding-left-70 padding-right-10">
+                                            <div class="col-md-4 col-sm-4 padding-right-50">
+                                                <label class="fontcolor-dark margin-btm-10">Status</label>
+                                                <div class="select-holder">
+                                                    <select id="requestStatus"
+                                                            name="requestStatus"
+                                                            class="form-control themed-input themed-select"
+                                                            th:field="*{status}"
+                                                            onchange="">
+                                                        <option value=""></option>
+                                                        <option th:each="requestStatus : *{requestStatuses}" th:value="${requestStatus}" th:text="${requestStatus}"></option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <div class="input-group-btn search-panel padding-right-10">
                                                 <button id="searchRequestsButton" class="btn themed-button themed-button-search" type="button" name="searchRequestsButton" onclick="searchRequests('searchRequests')">Search</button>
                                             </div>
                                             <div class="input-group-btn">
@@ -62,56 +77,34 @@
 
                                         </div>
                                     </div>
-                                    <div class="col-sm-9 col-md-10 col-lg-7 margin-top-10"><div class="row">RI - Requesting Institution, RT - Request Type, OI - Owning Institution</div>
+                                    <div class="col-sm-9 col-md-10 col-lg-7 margin-top-10"><div class="row">RI - Requesting Institution, RT - Request Type, OI - Owning Institution, DL - Delivery Location</div>
                                     </div>
                                     <div class="col-sm-12 col-md-12 col-lg-3 text-right"><h4>Search Results Found: <span th:text="*{totalRecordsCount}"></span></h4></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <table id="request-result-table" class="table table-striped margin-btm-0">
-                                            <thead class="tablesorter-headerRow">
+                                            <thead class="tablesorter-headerRow" height="70">
                                             <tr>
-                                                <th height="40" width="7%" align="center" class="text-center">
-                                                    <div class="checkbox table-header-checkbox">
-                                                        <label class="text-center">
-                                                            Select All
-                                                            <span class="clearfix"></span>
-                                                            <input type="checkbox" id="requestSelectAll"
-                                                                   name="requestSelectAll"
-                                                                   th:value="false"
-                                                                   th:onclick="'javascript:selectAllRows();enableRequestButtons()'">
-                                                            <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-                                                            </input>
-                                                        </label>
-                                                    </div>
-                                                </th>
-                                                <th>PATRON BARCODE</th>
+                                                <th>Patron Barcode</th>
                                                 <th th:title="'Request Institution'">RI</th>
-                                                <th>ITEM BARCODE</th>
-                                                <th th:title="'ITEM Owning Institution'">ITEM OI</th>
-                                                <th>DELIVERY LOCATION</th>
+                                                <th>Item Barcode</th>
+                                                <th th:title="'Item Owning Institution'">Item OI</th>
+                                                <th th:title="'Delivery Location'">DL</th>
                                                 <th th:title="'Request Type'">RT</th>
-                                                <th>REQUEST CREATED BY</th>
-                                                <th>PATRON EMAIL ADDRESS</th>
-                                                <th>REQUEST NOTES</th>
+                                                <th>Request Created By</th>
+                                                <th>Patron Email Address</th>
+                                                <th>Created Date</th>
+                                                <th>Status</th>
+                                                <th>Request Notes</th>
+                                                <th>Cancel</th>
                                             </tr>
                                             </thead>
                                             <tbody>
                                                 <tr data-th-id="'requestResults-'+ ${searchResultStat.index}" th:each="searchResult,searchResultStat : *{searchResultRows}" class="requestRow">
                                                     <input data-th-id="'requestRowBibId-'+ ${searchResultStat.index}" name="requestRowBibId" type="hidden" th:field="*{searchResultRows[__${searchResultStat.index}__].bibId}"/>
                                                     <input data-th-id="'requestRowItemId-'+ ${searchResultStat.index}" name="requestRowItemId" type="hidden" th:field="*{searchResultRows[__${searchResultStat.index}__].itemId}"/>
-                                                    <td align="center">
-                                                        <div class="checkbox table-body-checkbox">
-                                                            <label>
-                                                                <input type="checkbox" id="requestSelected" name="requestSelected"
-                                                                       th:field="*{searchResultRows[__${searchResultStat.index}__].selected}"
-                                                                       style="margin-left: 25px;"
-                                                                       onclick="enableRequestButtons()">
-                                                                <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-                                                                </input>
-                                                            </label>
-                                                        </div>
-                                                    </td>
+                                                    <input data-th-id="'requestRowRequestId-'+ ${searchResultStat.index}" name="requestRowRequestId" type="hidden" th:field="*{searchResultRows[__${searchResultStat.index}__].requestId}"/>
                                                     <td>
                                                         <input type="hidden" th:field="*{searchResultRows[__${searchResultStat.index}__].patronBarcode}"/>
                                                         <span th:text="${searchResult.patronBarcode}"></span>
@@ -145,8 +138,21 @@
                                                         <span th:text="${searchResult.patronEmailId}"></span>
                                                     </td>
                                                     <td width="">
-                                                        <input type="hidden" th:field="*{searchResultRows[__${searchResultStat.index}__].requestNotes}"/>
-                                                        <span th:text="${searchResult.requestNotes}"></span>
+                                                        <input type="hidden" th:field="*{searchResultRows[__${searchResultStat.index}__].createdDate}"/>
+                                                        <span th:text="${#dates.format(searchResult.createdDate, 'yyyy-MM-dd HH:mm:ss')}"></span>
+                                                    </td>
+                                                    <td width="">
+                                                        <input type="hidden" th:field="*{searchResultRows[__${searchResultStat.index}__].status}"/>
+                                                        <span data-th-id="'status-' + ${searchResultStat.index}" th:text="${searchResult.status}"></span>
+                                                    </td>
+                                                    <td width="" style="text-align: center">
+                                                        <input data-th-id="'notes-' + ${searchResultStat.index}" type="hidden" th:field="*{searchResultRows[__${searchResultStat.index}__].requestNotes}"/>
+                                                        <button th:title="'Show Notes'" data-th-id="'notesButton-' + ${searchResultStat.index}" type="button" name="action" th:onclick="'javascript:showNotesPopup('+${searchResultStat.index}+')'"><i class="fa fa-search" aria-hidden="true"></i>
+                                                        </button>
+                                                    </td>
+                                                    <td width="">
+                                                        <button th:if="${searchResult.status == 'RETRIEVAL ORDER PLACED' || searchResult.status == 'RECALL_RETRIEVAL ORDER PLACED'}" th:title="'Cancel Request'" data-th-id="'cancelButton-' + ${searchResultStat.index}" type="button" name="action" th:onclick="'javascript:cancelRequest('+${searchResultStat.index}+')'"><i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                                                        </button>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -183,9 +189,6 @@
                                                 </ul>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div id="requestButtonsId" name="requestButtonsName" class="form-group input-group-btn" align="center">
-                                        <button id="cancelRequestsButtonId" type="button" name="action" value="cancelRequests" class="btn btn-primary" disabled="disabled">Cancel Selected Requests</button>
                                     </div>
                                 </div>
                             </div>
@@ -531,6 +534,51 @@
                     </div>
                 </div>
                 <!-- Modal Data-->
+
+                <!-- Cancel Modal Data-->
+                <div id="cancelRequestModal" class="modal fade create-request-details" tabindex="-2" role="dialog" aria-labelledby="cancelRequestLargeModalLabel" data-keyboard="false" data-backdrop="static">
+                    <div class="modal-dialog" role="document">
+                        <div id="cancelRequestModalContent" class="modal-content">
+                            <div class="modal-header bg-success">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h2 class="modal-title text-center text-success" id="cancelRequestModalLabel">Cancel Request</h2>
+                            </div>
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="padding-10">
+                                            <span id="cancelStatus"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Cancel Modal Data-->
+
+                <!-- Notes Modal Data-->
+                <div id="requestNotesModal" class="modal fade create-request-details" tabindex="-2" role="dialog" aria-labelledby="requestNotesLargeModalLabel" data-keyboard="false" data-backdrop="static">
+                    <div class="modal-dialog" role="document">
+                        <div id="requestNotesModalContent" class="modal-content">
+                            <div class="modal-header bg-success">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h2 class="modal-title text-center text-success" id="requestNotesModalLabel">Request Notes</h2>
+                            </div>
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="padding-10">
+                                            <span id="requestNotesData"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Notes Modal Data-->
+
             </fieldset>
         </form>
     </div>
