--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -69,11 +69,13 @@
                                     <div class="col-sm-3 col-md-2 col-lg-2 margin-top-05 show-entries-section">
                                         <div class="">
                                             <span class="show-title margin-right-05">Show Entries</span>
-                                            <select id="numOfRecordsId" name="numOfRecordsName" class="themed-input">
+                                            <select id="numOfRecordsId" name="numOfRecordsName" class="themed-input"
+                                                    th:field="*{pageSize}" onchange="requestsOnPageSizeChange()">
                                                 <option value="10">10</option>
                                                 <option value="25">25</option>
                                                 <option value="50">50</option>
-                                                <option value="100">100</option></select>
+                                                <option value="100">100</option>
+                                            </select>
 
                                         </div>
                                     </div>
