Recap-424 scsb ui changes in recap header, recap footer,reports ui , enabled request button in search ui

--- a/src/main/resources/templates/recapFooter.html
+++ b/src/main/resources/templates/recapFooter.html
@@ -1,7 +1,15 @@
 <div id="recapPageFooterId" name="recapPageFooterName">
+    <script type="text/javascript">
+        jQuery(document).ready(function ($) {
+            $.ajax({url: "/getVersionNumber", success: function(result){
+                console.log(result);
+                $("#version").html(result);
+            }});
+        });
+    </script>
     <footer>
         <div class="container-fluid">
-            <p class="text-right margin-10">&copy; 2016 RECAP All Rights Reserved</p>
+            <p><span class="pull-left margin-10"> Version::<span id="version"></span></span><span class="pull-right margin-10">&copy; 2016 RECAP All Rights Reserved</span></p>
         </div>
     </footer>
 </div>
