--- a/src/main/resources/templates/recapHeader.html
+++ b/src/main/resources/templates/recapHeader.html
@@ -1,12 +1,4 @@
 <div id="recapPageHeaderId" name="recapPageHeaderName" xmlns:th="http://www.w3.org/1999/xhtml">
-    <script type="text/javascript">
-        jQuery(document).ready(function ($) {
-            $.ajax({url: "/getVersionNumber", success: function(result){
-                console.log(result);
-                $("#version").html(result);
-            }});
-        });
-    </script>
     <header class="">
         <div class="container-fluid">
             <div class="row">
@@ -24,19 +16,11 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="header-info">
-                                <div class="row text-right">
-                                    <div class="col-xs-12">
-                                        <div class="pull-right margin-left-30" style="margin-top: -10px">
-                                            Version::<span id="version"></span>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="row margin-top-15 text-right">
                                     <div class="col-xs-12">
                                         <div class="pull-right margin-left-30">
-                                            Welcome <span th:text="${session.userName}"></span> <span class="glyphicon glyphicon-menu-down small"></span>
+                                            Welcome <span th:text="${session.userName}"></span>
                                         </div>
-                                        <div class="pull-right"><span th:text="${#dates.format(#dates.createNow(), 'dd MMMM yyyy hh:mm a')}"></span></div>
                                     </div>
                                 </div>
                                 <div class="row margin-top-15 text-right" style="margin-bottom: 15px;">
@@ -45,7 +29,7 @@
                                             <a href="/logout" class="logout-login logout"><span></span>Logout</a>
                                         </div>
                                         <div class="pull-right">
-                                            <a href="#" class="settings"><span></span>Settings</a>
+                                            <a href="#" class=""><span class="glyphicon glyphicon-question-sign"></span> Help</a>
                                         </div>
                                     </div>
                                 </div>
