--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -87,7 +87,7 @@
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <table id="request-result-table" class="table table-striped margin-btm-0">
-                                            <thead class="tablesorter-headerRow" height="70">
+                                            <thead class="tablesorter-headerRow">
                                             <tr>
                                                 <th>Patron Barcode</th>
                                                 <th th:title="'Request Institution'">RI</th>
