added help links , resolved edit users and delete users with same loginId and different institutions

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -200,7 +200,7 @@
                     <div id="createRequestSection" class="create-request-section">
                         <div class="row margin-top-0">
                             <div class="col-sm-6 margin-top-0"><h3 class="margin-0">Create Request</h3></div>
-                            <div class="col-sm-6 text-right search-request"><a href="#"><span class="glyphicon glyphicon-plus-sign"></span> Search Requests</a></div>
+                            <div class="col-sm-6 text-right search-request"><a href="#" name="searchRequestlink"><span class="glyphicon glyphicon-plus-sign"></span> Search Requests</a></div>
                         </div>
                         <div class="row">
                             <div class="col-xs-12 divider-horizontal margin-top-10 margin-btm-10"></div>
