--- a/src/main/resources/templates/recapHeader.html
+++ b/src/main/resources/templates/recapHeader.html
@@ -29,7 +29,7 @@
                                             <a href="/logout" class="logout-login logout"><span></span>Logout</a>
                                         </div>
                                         <div class="pull-right">
-                                            <a href="#" class=""><span class="glyphicon glyphicon-question-sign"></span> Help</a>
+                                            <a href="https://htcrecap.atlassian.net/wiki/display/RTG/Search" class="" target="_blank"><span class="glyphicon glyphicon-question-sign"></span> Help</a>
                                         </div>
                                     </div>
                                 </div>
