Recap-493 populating item title and institution in request Ui.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -465,7 +465,7 @@
                             <div class="row">
                                 <div class="col-xs-12 text-center">
                                     <button type="button" class="btn btn-default themed-button btn-primary" id="createrequestsubmit" onclick="createRequest()">Submit</button>
-                                    <button type="reset" class="btn btn-default themed-button themed-button-cancel" id="createrequestclear" onclick="resetDefaults()">Clear</button>
+                                    <button type="button" class="btn btn-default themed-button themed-button-cancel" id="createrequestclear" onclick="resetDefaults()">Clear</button>
                                 </div>
                             </div>
                         </div>
